<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">






        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="#D0F6DB"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/tv_editdetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="Profile Details"
                    android:textAlignment="center"
                    android:textColor="#070707"
                    android:textSize="40sp" />



                    <EditText
                android:id="@+id/et_edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="sans-serif"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />


                <EditText
                    android:id="@+id/et_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="sans-serif"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="15sp" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="100sp"
                    android:background="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:id="@+id/logout"
                    android:textColor="@android:color/white"
                    android:text="Save"/>

            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>
</LinearLayout>